<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserProfile"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@dimen/user_profile_weight_sum">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_textView"
                android:textStyle="bold"
                android:layout_weight="@dimen/user_profile_textView_weight"/>

            <EditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_name_hint"
                android:layout_weight="@dimen/user_profile_editText_weight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@dimen/user_profile_weight_sum">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_email_textView"
                android:textStyle="bold"
                android:layout_weight="@dimen/user_profile_textView_weight"/>

            <EditText
                android:id="@+id/userEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email_hint"
                android:layout_weight="@dimen/user_profile_editText_weight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@dimen/user_profile_weight_sum">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_textView"
                android:textStyle="bold"
                android:layout_weight="@dimen/user_profile_textView_weight"/>

            <EditText
                android:id="@+id/userPhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="number"
                android:layout_weight="@dimen/user_profile_editText_weight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@dimen/user_profile_weight_sum">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password_textView"
                android:textStyle="bold"
                android:layout_weight="@dimen/user_profile_textView_weight"/>

            <EditText
                android:id="@+id/userPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password_hint"
                android:inputType="textPassword"
                android:layout_weight="@dimen/user_profile_editText_weight"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="@dimen/user_profile_weight_sum">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed_password_textView"
                android:textStyle="bold"
                android:layout_weight="@dimen/user_profile_textView_weight"/>

            <EditText
                android:id="@+id/userConfirmedPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_weight="@dimen/user_profile_editText_weight"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:weightSum="1">

        <Button
            android:id="@+id/userProfileSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_weight="0.5"
            android:layout_marginRight="50dp" />

        <Button
            android:id="@+id/userProfileCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="0.5"/>

    </LinearLayout>

</LinearLayout>