<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UserRegistration"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_marginTop="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password_hint"
            android:inputType="textPassword"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/confirmedPasswordEditText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmed_password_hint"
            android:inputType="textPassword"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:padding="10dp"/>

        <Button
            android:id="@+id/registerButton"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            android:layout_gravity="center"
            android:enabled="false"
            android:padding="10dp"/>

    </LinearLayout>

</LinearLayout>